Adjusted vertical position of routes-container element in About component to correct for overlap of lil-extra and About content after using lil-nav

--- a/src/About/about.scss
+++ b/src/About/about.scss
@@ -85,7 +85,7 @@ $hover-color: #fcfa85;
   @media only screen and (max-width: $lgDevice) {
     display: block;
     width: 100%;
-    margin-left: 20px;
+    margin: 50px 0px;
     overflow: scroll;
 
 
@@ -110,7 +110,7 @@ $hover-color: #fcfa85;
     flex-flow: column;
     height: 100%;
     justify-content: space-between;
-    margin-left: 0px;
+    margin: 50px 0px;
 
   .fas {
     margin: 16px 33px -40px 100px;
